# task_example

./: Dockerfile  Readme.md  docker-compose.yaml  pyproject.toml  task_1.SQL  task_2.SQL
source/: exceptions.py  main.py  redis_service.py  router.py  schemes.py  settings.py  validator.py
